Publish post Confluent-Cloud setup and optimize publishing